public/scss/components/_date-range-picker.scss
.date-range-picker,
.date-picker-button {
  @include button-control;

  .date-input-wrap {
    position: relative;
    cursor: pointer;

    > div {
      position: absolute;
      top: 0;

      .datepicker__input {
        opacity: 0;
        z-index: -999;
      }
    }
  }

  &__icon {
    font-size: rem-calc(18);
    line-height: rem-calc(26);
    margin-right: rem-calc(10);
  }

  &__separator {
    padding: 0 rem-calc(5);
  }
}

